# c_clustering_fi

./: CMakeLists.txt  README.md  ToDoList.txt  table.c  table.h  watchdog.py
codes/kmeans/: Makefile  kmeans.c  kmeans.conf  kmeans.conf.KNL  kmeans.h  kmeans_clustering.c
data/: 20_34.txt  data_test.csv  diana_result.txt  haberman.data
data/fi-results/: AGNES_stats.sh  DIANA_stats.sh  all_results.txt  kmeans_stats.sh
data/inputs/: 5000_20f.txt
include/: csv_parser.h  log_helper.c  table.h
src/: csv_parser.c  main.c  table.c
src/AGNES/: 100000_2.txt  10000_2.txt  1000_2.txt  10_2.txt  2000_2.txt  5000_2.txt  Makefile  READ.ME  agglomerate.c  agnes  agnes.conf  agnes_check.c  watchdog-AGNES.py
src/AGNES/fi/: diana_exec_15s.conf
src/AGNES/gold_gen/: agglomerate.c
src/AGNES/inpugen/: 1000_2.txt  1500_2.txt  1700_2.txt  1900_2.txt  datagen  datagen.cpp
src/AGNES/input_gen/: 2000_2.txt  500_2.txt  datagen  datagen.cpp
src/DIANA/: Makefile  Makefile.KNL  cluster.c  dendrogram.cpp  dendrogram.h  diana.c  diana.cpp  diana.h  diana_clustering.c  diana_clustering.cpp  diana_gold_check.c  diana_gold_check.cpp  diana_radiation.cpp
src/DIANA/fi/: datagen  diana  diana.conf  diana.conf.KNL  diana_exec_10s.conf  diana_exec_15s.conf  prepare_fi.sh
src/kmeans/: Makefile  README.txt  cluster.c  cluster.h  kmeans.c  kmeans.h  kmeans_clustering.c  kmeans_clustering.h  kmeans_gold_check.c
src/kmeans/fi/: gold100000_34  kmeans  kmeans.conf
